Update title and comment in index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formation IA - Style Amiral Pro</title>
+    <title>Formation IA</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLMDJ8D88W6dFCEzE8I/k7j60Y0wXpW2N65eY/q8fFpC35K7Jd2K1O8gX7g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <style>
-        /* --- PALETTE & BASE (Style Amiral PRO) --- */
+        /* --- PALETTE & BASE --- */
         :root {
             /* Couleurs Principales */
             --amiral-blue-dark: #1F3A68;
